# telegram-auth-wall

./: Dockerfile  license  pyproject.toml  readme.md
site/: index.html  page.html
src/: __init__.py  auth.py  staticfiles.py  vars.py  whitelist.py
src/templates/: login.html
