[tool.poetry]
name = "telegram-auth-wall"
version = "0.1.0"
description = ""
authors = ["Artyom Ivanov <tmat.ivanov@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
joserfc = "^0.8.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
